--- a/model_bbox/Classifier.ipynb
+++ b/model_bbox/Classifier.ipynb
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1270,7 +1270,8 @@
     "    outputs_im = np.asarray(outputs_im)\n",
     "    outputs[im] = np.mean(outputs_im, axis=0)\n",
     "\n",
-    "outputs_cliped = np.clip(outputs,0.02, 0.98, out=None)\n",
+    "CLIP_THRESH = 0.02\n",
+    "outputs_cliped = np.clip(outputs, CLIP_THRESH, 1, out=None)\n",
     "outputs_cliped = outputs_cliped/np.sum(outputs_cliped, axis=1, keepdims=True)\n",
     "    \n",
     "test_preds = outputs_cliped[:1000]\n",
@@ -1279,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1289,7 +1290,7 @@
      "output_type": "stream",
      "text": [
       "3777\n",
-      "logloss of train is 0.19519114752365183\n"
+      "logloss of train is 0.1943379696201049\n"
      ]
     }
    ],
@@ -1316,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1329,7 +1330,7 @@
     "submission.insert(0, 'image', test_files)\n",
     "\n",
     "now = datetime.datetime.now()\n",
-    "info = 'RFCN_resnet50_clip_' + '{:.4f}'.format(log_loss)\n",
+    "info = 'RFCN_resnet50_conf{:.1f}_'.format(CONF_THRESH) + 'clip{:.2f}_'.format(CLIP_THRESH) + '{:.4f}'.format(log_loss)\n",
     "sub_file = 'submission_' + info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
     "submission.to_csv(sub_file, index=False)"
    ]
