--- a/model_bbox/Classifier.ipynb
+++ b/model_bbox/Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,29 +82,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../data/train_crop/LAG/ALB_img_01800_6_LAG.jpg\n",
-      "../data/train_crop/LAG/ALB_img_03397_1_LAG.jpg\n",
-      "../data/train_crop/LAG/ALB_img_03451_1_LAG.jpg\n",
-      "../data/train_crop/LAG/ALB_img_03748_4_LAG.jpg\n",
-      "../data/train_crop/ALB/DOL_img_07212_1_ALB.jpg\n",
-      "../data/train_crop/ALB/DOL_img_07212_2_ALB.jpg\n",
-      "../data/train_crop/LAG/SHARK_img_06082_0_LAG.jpg\n",
-      "../data/train_crop/ALB/SHARK_img_06082_1_ALB.jpg\n",
-      "../data/train_crop/ALB/SHARK_img_06082_2_ALB.jpg\n"
-     ]
-    }
-   ],
    "source": [
     "#crop and cache to TRAIN_CROP_DIR\n",
     "if not os.path.exists(TRAIN_CROP_DIR):\n",
@@ -924,13 +906,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5940\n"
+     ]
+    }
+   ],
    "source": [
-    "#crop test images and cache to TEST_CROP_DIR by detections_full.pkl and RFCN/ImageSets/Main/test.txt\n",
+    "#get bbox from detections_full.pkl and RFCN/ImageSets/Main/test.txt\n",
+    "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
     "import pickle \n",
     "with open('../data/RFNC_detections/detections_full.pkl','rb') as f:\n",
@@ -944,11 +935,13 @@
     "    outputs_im = []\n",
     "    detects_im = []\n",
     "    for cls in range(1,len(FISH_CLASSES)):\n",
+    "        detects_im_cls = detections_full[cls][im]\n",
+    "        for i in range(len(detects_im_cls)):\n",
+    "            if np.max(detects_im_cls[i,4+cls]) >= CONF_THRESH:\n",
+    "                outputs_im.append(detects_im_cls[i,:])   \n",
+    "    for cls in range(1,len(FISH_CLASSES)):  \n",
     "        detects_im.append(detections_full[cls][im])\n",
     "    detects_im = np.vstack(detects_im)\n",
-    "    for i in range(len(detects_im)):\n",
-    "        if np.max(detects_im[i,5:]) >= CONF_THRESH:\n",
-    "            outputs_im.append(detects_im[i,:])\n",
     "    if len(outputs_im) == 0:\n",
     "        ind = np.argmax(np.max(detects_im[:,5:], axis=1))\n",
     "        l = [0,0,0,0]\n",
@@ -957,14 +950,67 @@
     "    outputs_im = np.asarray(outputs_im)\n",
     "    outputs.append(outputs_im)\n",
     "\n",
-    "print(sum([outputs[i].shape[0] for i in range(len(outputs))]))\n",
+    "print(sum([outputs[i].shape[0] for i in range(len(outputs))]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#visualize test image crop\n",
+    "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
+    "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
+    "    ims = f.readlines()\n",
+    "test_files = [im[:-1]+'.jpg' for im in ims]\n",
+    "\n",
+    "for j in range(10):\n",
+    "    dets = outputs[j]\n",
+    "    print(dets)\n",
+    "    im = Image.open(\"../RFCN/JPEGImages/\"+test_files[j])\n",
+    "    im = np.asarray(im)\n",
+    "    #im = im[:, :, (2, 1, 0)]\n",
+    "    fig, ax = plt.subplots(figsize=(12, 12))\n",
+    "    ax.imshow(im, aspect='equal')\n",
+    "    for i in range(dets.shape[0]):\n",
+    "        bbox = dets[i, :4]\n",
+    "        score = np.amax(dets[i,4:])\n",
+    "        index = np.argmax(dets[i,4:])\n",
+    "        class_name = FISH_CLASSES[index]\n",
+    "        if not (bbox[0] == 0 and bbox[1] == 0 and bbox[2] == 0 and bbox[3] == 0):\n",
+    "            ax.add_patch(plt.Rectangle((bbox[0], bbox[1]),\n",
+    "                              bbox[2] - bbox[0],\n",
+    "                              bbox[3] - bbox[1], fill=False,\n",
+    "                              edgecolor='red', linewidth=3.5))\n",
+    "            ax.text(bbox[0], bbox[1] - 2,\n",
+    "                    '{:s} {:.3f}'.format(class_name, score),\n",
+    "                    bbox=dict(facecolor='blue', alpha=0.5),\n",
+    "                    fontsize=14, color='white')\n",
+    "\n",
+    "    ax.set_title(('Image {} {} detections with '\n",
+    "                  'p({} | box) >= {:.1f}').format(j,class_name, class_name,CONF_THRESH),fontsize=14)\n",
+    "    plt.axis('off')\n",
+    "    plt.tight_layout()\n",
+    "    plt.draw()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#crop test images and cache to TEST_CROP_DIR\n",
     "if not os.path.exists(TEST_CROP_DIR):\n",
     "    os.mkdir(TEST_CROP_DIR)\n",
     "files = glob.glob(TEST_CROP_DIR+'*')\n",
     "for f in files:\n",
     "    os.remove(f)\n",
-    "            \n",
+    "    \n",
     "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
     "    ims = f.readlines()\n",
     "test_files = [im[:-1]+'.jpg' for im in ims]\n",
@@ -995,31 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'i' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-e050d7e2748e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#visualize test image crop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "#visualize test image crop\n",
-    "outputs[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1029,15 +1051,12 @@
      "output_type": "stream",
      "text": [
       "Loading test data from original images. Generating data_test_BBCrop_270_480.pickle.\n",
-      "Processed 0 of 8216\n",
-      "Processed 1000 of 8216\n",
-      "Processed 2000 of 8216\n",
-      "Processed 3000 of 8216\n",
-      "Processed 4000 of 8216\n",
-      "Processed 5000 of 8216\n",
-      "Processed 6000 of 8216\n",
-      "Processed 7000 of 8216\n",
-      "Processed 8000 of 8216\n"
+      "Processed 0 of 5940\n",
+      "Processed 1000 of 5940\n",
+      "Processed 2000 of 5940\n",
+      "Processed 3000 of 5940\n",
+      "Processed 4000 of 5940\n",
+      "Processed 5000 of 5940\n"
      ]
     }
    ],
@@ -1102,17 +1121,8 @@
     "print('Loading model from', files[index])\n",
     "model = load_model(files[index])\n",
     "\n",
-    "test_crop_preds = model.predict(X_test_crop, batch_size=BatchSize, verbose=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "test_crop_preds = model.predict(X_test_crop, batch_size=BatchSize, verbose=1)\n",
+    "\n",
     "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
     "    ims = f.readlines()\n",
     "test_files = [im[:-1]+'.jpg' for im in ims]\n",
@@ -1146,9 +1156,9 @@
     }
    ],
    "source": [
+    "#calculate train logloss\n",
     "train_files = test_files[1000:]\n",
     "train_preds = test_preds[1000:,:]\n",
-    "print(len(train_files))\n",
     "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
     "    train_file_labels = f.readlines()\n",
     "\n",
@@ -1172,6 +1182,8 @@
    },
    "outputs": [],
    "source": [
+    "#test submission\n",
+    "FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
     "submission = pd.DataFrame(test_preds[:1000,:], columns=FISH_CLASSES)\n",
     "submission.insert(0, 'image', test_files[:1000])\n",
     "\n",
@@ -1214,135 +1226,6 @@
     "for f in files:\n",
     "    os.remove(f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# summarize history for accuracy\n",
-    "plt.figure(figsize=(15, 5))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(hist.history['acc']); plt.plot(hist.history['val_acc']);\n",
-    "plt.title('model accuracy'); plt.ylabel('accuracy');\n",
-    "plt.xlabel('epoch'); plt.legend(['train', 'valid'], loc='upper left');\n",
-    "\n",
-    "# summarize history for loss\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.plot(hist.history['loss']); plt.plot(hist.history['val_loss']);\n",
-    "plt.title('model loss'); plt.ylabel('loss');\n",
-    "plt.xlabel('epoch'); plt.legend(['train', 'valid'], loc='upper left');\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG','OTHER', 'SHARK', 'YFT']\n",
-    "\n",
-    "import pickle \n",
-    "with open('../data/RFNC_detections/detections_full.pkl','rb') as f:\n",
-    "    detections_full = pickle.load(f, encoding='latin1') \n",
-    "    \n",
-    "CONF_THRESH = 0.8\n",
-    "outputs = np.ndarray((len(detections_full[0]), len(FISH_CLASSES)), dtype=np.float64)\n",
-    "\n",
-    "for im in range(len(detections_full[0])):\n",
-    "    outputs_im = []\n",
-    "    detects_im = []\n",
-    "    for cls in range(1,len(FISH_CLASSES)):\n",
-    "        detects_im.append(detections_full[cls][im])\n",
-    "    detects_im = np.vstack(detects_im)\n",
-    "    for i in range(len(detects_im)):\n",
-    "        if np.max(detects_im[i,5:]) >= CONF_THRESH:\n",
-    "            outputs_im.append(detects_im[i,4:])    \n",
-    "    if len(outputs_im) == 0:\n",
-    "        index_wobg = np.argmax(np.amax(detects_im[:,5:], axis=1))\n",
-    "        outputs_im.append(detects_im[index_wobg,4:])    \n",
-    "    outputs_im = np.asarray(outputs_im)\n",
-    "    outputs[im] = np.mean(outputs_im, axis=0)\n",
-    "\n",
-    "CLIP_THRESH = 0.02\n",
-    "outputs_cliped = np.clip(outputs, CLIP_THRESH, 1, out=None)\n",
-    "outputs_cliped = outputs_cliped/np.sum(outputs_cliped, axis=1, keepdims=True)\n",
-    "    \n",
-    "test_preds = outputs_cliped[:1000]\n",
-    "train_preds = outputs_cliped[1000:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3777\n",
-      "logloss of train is 0.1943379696201049\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
-    "    ims = f.readlines()\n",
-    "test_files = [im[:-1]+'.jpg' for im in ims[:1000]]\n",
-    "train_files = [im[:-1] for im in ims[1000:]]\n",
-    "print(len(train_files))\n",
-    "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
-    "    train_file_labels = f.readlines()\n",
-    "\n",
-    "log_losses = []\n",
-    "for i in range(len(train_preds)):\n",
-    "    im = train_files[i]\n",
-    "    for im_label in train_file_labels:\n",
-    "        if im == im_label[:9]:\n",
-    "            label = im_label[10:-1]\n",
-    "            index = FISH_CLASSES.index(label)\n",
-    "            log_losses.append(-math.log(train_preds[i][index]))\n",
-    "log_loss = sum(log_losses) / float(len(log_losses))\n",
-    "print('logloss of train is', log_loss )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "\n",
-    "submission = pd.DataFrame(test_preds, columns=FISH_CLASSES)\n",
-    "#submission.loc[:, 'image'] = pd.Series(test_files, index=submission.index)\n",
-    "submission.insert(0, 'image', test_files)\n",
-    "\n",
-    "now = datetime.datetime.now()\n",
-    "info = 'RFCN_resnet50_conf{:.1f}_'.format(CONF_THRESH) + 'clip{:.2f}_'.format(CLIP_THRESH) + '{:.4f}'.format(log_loss)\n",
-    "sub_file = 'submission_' + info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
-    "submission.to_csv(sub_file, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
