--- a/model_bbox/RFCN.ipynb
+++ b/model_bbox/RFCN.ipynb
@@ -171,6 +171,7 @@
     }
    ],
    "source": [
+    "#submission from detections_full.pkl\n",
     "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
     "import pickle \n",
