--- a/model_bbox/Classifier.ipynb
+++ b/model_bbox/Classifier.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15583, 224, 224, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -521,17 +543,78 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoints file ./checkpoints/checkpoint2/weights.004-1.1775.hdf5\n",
+      "Epoch 1/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.8447 - acc: 0.7795"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py:1470: UserWarning: Epoch comprised more than `samples_per_epoch` samples, which might affect learning results. Set `samples_per_epoch` correctly to avoid this warning.\n",
+      "  warnings.warn('Epoch comprised more than '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 00000: val_loss improved from inf to 1.02681, saving model to ./checkpoints/checkpoint2/weights.000-1.0268.hdf5\n",
+      "15616/15583 [==============================] - 291s - loss: 0.8449 - acc: 0.7791 - val_loss: 1.0268 - val_acc: 0.7845\n",
+      "Epoch 2/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.7952 - acc: 0.7880Epoch 00001: val_loss improved from 1.02681 to 0.96753, saving model to ./checkpoints/checkpoint2/weights.001-0.9675.hdf5\n",
+      "15616/15583 [==============================] - 244s - loss: 0.7965 - acc: 0.7874 - val_loss: 0.9675 - val_acc: 0.7742\n",
+      "Epoch 3/30\n",
+      "15517/15583 [============================>.] - ETA: 0s - loss: 0.7733 - acc: 0.7930Epoch 00002: val_loss improved from 0.96753 to 0.84487, saving model to ./checkpoints/checkpoint2/weights.002-0.8449.hdf5\n",
+      "15645/15583 [==============================] - 246s - loss: 0.7738 - acc: 0.7927 - val_loss: 0.8449 - val_acc: 0.7858\n",
+      "Epoch 4/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.7238 - acc: 0.8014Epoch 00003: val_loss improved from 0.84487 to 0.74432, saving model to ./checkpoints/checkpoint2/weights.003-0.7443.hdf5\n",
+      "15616/15583 [==============================] - 244s - loss: 0.7229 - acc: 0.8016 - val_loss: 0.7443 - val_acc: 0.7956\n",
+      "Epoch 5/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.6864 - acc: 0.8053Epoch 00004: val_loss improved from 0.74432 to 0.66074, saving model to ./checkpoints/checkpoint2/weights.004-0.6607.hdf5\n",
+      "15616/15583 [==============================] - 244s - loss: 0.6862 - acc: 0.8055 - val_loss: 0.6607 - val_acc: 0.8145\n",
+      "Epoch 6/30\n",
+      "15517/15583 [============================>.] - ETA: 0s - loss: 0.6779 - acc: 0.8114Epoch 00005: val_loss did not improve\n",
+      "15645/15583 [==============================] - 243s - loss: 0.6774 - acc: 0.8113 - val_loss: 0.6671 - val_acc: 0.8128\n",
+      "Epoch 7/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.6503 - acc: 0.8161Epoch 00006: val_loss improved from 0.66074 to 0.61099, saving model to ./checkpoints/checkpoint2/weights.006-0.6110.hdf5\n",
+      "15616/15583 [==============================] - 243s - loss: 0.6512 - acc: 0.8159 - val_loss: 0.6110 - val_acc: 0.8296\n",
+      "Epoch 8/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.6273 - acc: 0.8212Epoch 00007: val_loss improved from 0.61099 to 0.57337, saving model to ./checkpoints/checkpoint2/weights.007-0.5734.hdf5\n",
+      "15616/15583 [==============================] - 243s - loss: 0.6275 - acc: 0.8210 - val_loss: 0.5734 - val_acc: 0.8417\n",
+      "Epoch 9/30\n",
+      "15517/15583 [============================>.] - ETA: 0s - loss: 0.6079 - acc: 0.8246Epoch 00008: val_loss did not improve\n",
+      "15645/15583 [==============================] - 243s - loss: 0.6074 - acc: 0.8247 - val_loss: 0.5836 - val_acc: 0.8400\n",
+      "Epoch 10/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.5763 - acc: 0.8347Epoch 00009: val_loss improved from 0.57337 to 0.56416, saving model to ./checkpoints/checkpoint2/weights.009-0.5642.hdf5\n",
+      "15616/15583 [==============================] - 244s - loss: 0.5781 - acc: 0.8341 - val_loss: 0.5642 - val_acc: 0.8364\n",
+      "Epoch 11/30\n",
+      "15488/15583 [============================>.] - ETA: 1s - loss: 0.5825 - acc: 0.8301Epoch 00010: val_loss improved from 0.56416 to 0.54485, saving model to ./checkpoints/checkpoint2/weights.010-0.5449.hdf5\n",
+      "15616/15583 [==============================] - 245s - loss: 0.5827 - acc: 0.8299 - val_loss: 0.5449 - val_acc: 0.8521\n",
+      "Epoch 12/30\n",
+      "15517/15583 [============================>.] - ETA: 0s - loss: 0.5708 - acc: 0.8332Epoch 00011: val_loss did not improve\n",
+      "15645/15583 [==============================] - 245s - loss: 0.5695 - acc: 0.8334 - val_loss: 0.5657 - val_acc: 0.8354\n",
+      "Epoch 13/30\n",
+      " 3072/15583 [====>.........................] - ETA: 155s - loss: 0.5422 - acc: 0.8415"
+     ]
+    }
+   ],
    "source": [
     "#resume training\n",
     "\n",
-    "files = glob.glob('./checkpoints/*')\n",
+    "files = glob.glob('./checkpoints/checkpoint2/*')\n",
     "val_losses = [float(f.split('-')[-1][:-5]) for f in files]\n",
     "index = val_losses.index(min(val_losses))\n",
     "print('Loading model from checkpoints file ' + files[index])\n",
     "model = load_model(files[index])\n",
     "\n",
-    "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
+    "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=30, verbose=1, \n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=valid_generator, nb_val_samples=len(X_valid), nb_worker=3, pickle_safe=True)"
    ]
@@ -544,44 +627,38 @@
    },
    "outputs": [],
    "source": [
-    "#get bbox from detections_full.pkl and RFCN/ImageSets/Main/test.txt\n",
-    "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
+    "#get bbox from detections_full_AGNOSTICnms.pkl\n",
+    "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
+    "#FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
     "import pickle \n",
-    "with open('../data/RFNC_detections/detections_full.pkl','rb') as f:\n",
-    "    detections_full = pickle.load(f, encoding='latin1') \n",
-    "    \n",
+    "with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
+    "    detections_full_AGNOSTICnms = pickle.load(f, encoding='latin1') \n",
     "CONF_THRESH = 0.8\n",
     "outputs = []\n",
+    "count = np.zeros(len(detections_full_AGNOSTICnms))\n",
     "\n",
-    "for im in range(len(detections_full[0])):\n",
-    "#for im in range(1):\n",
+    "for im in range(len(detections_full_AGNOSTICnms)):\n",
     "    outputs_im = []\n",
-    "    detects_im = []\n",
-    "    for cls in range(1,len(FISH_CLASSES)):\n",
-    "        detects_im_cls = detections_full[cls][im]\n",
-    "        for i in range(len(detects_im_cls)):\n",
-    "            if np.max(detects_im_cls[i,4+cls]) >= CONF_THRESH:\n",
-    "                outputs_im.append(detects_im_cls[i,:])   \n",
-    "    for cls in range(1,len(FISH_CLASSES)):  \n",
-    "        detects_im.append(detections_full[cls][im])\n",
-    "    detects_im = np.vstack(detects_im)\n",
+    "    detects_im = detections_full_AGNOSTICnms[im]\n",
+    "    for i in range(len(detects_im)):\n",
+    "        if np.max(detects_im[i,5:]) >= CONF_THRESH:\n",
+    "            outputs_im.append(detects_im[i,:]) \n",
+    "    count[im] = len(outputs_im)\n",
     "    if len(outputs_im) == 0:\n",
     "        ind = np.argmax(np.max(detects_im[:,5:], axis=1))\n",
-    "        l = [0,0,0,0]\n",
-    "        l.extend(np.ndarray.tolist(detects_im[ind,4:]))\n",
-    "        outputs_im.append(l)\n",
+    "        outputs_im.append(detects_im[ind,:])\n",
     "    outputs_im = np.asarray(outputs_im)\n",
-    "    outputs.append(outputs_im)\n",
-    "\n",
-    "print(sum([outputs[i].shape[0] for i in range(len(outputs))]))\n"
+    "    outputs.append(outputs_im)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "#crop test images and cache to TEST_CROP_DIR\n",
     "if not os.path.exists(TEST_CROP_DIR):\n",
@@ -595,8 +672,9 @@
     "test_files = [im[:-1]+'.jpg' for im in ims]\n",
     "\n",
     "for i in range(len(outputs)):\n",
+    "    if i%1000 == 0:\n",
+    "        print(i)\n",
     "    filename = test_files[i]\n",
-    "    print(i,)\n",
     "    bboxes = outputs[i]\n",
     "    basename, file_extension = os.path.splitext(filename) \n",
     "    image = Image.open(TEST_DIR+filename)\n",
@@ -607,12 +685,7 @@
     "        xmax = bbox[2]\n",
     "        ymax = bbox[3]\n",
     "        file_crop = TEST_CROP_DIR+basename+'_{}_'.format(j)+'.jpg'\n",
-    "        if xmin==0 and ymin==0 and xmax==0 and ymax==0:\n",
-    "            cropped = image\n",
-    "        else:\n",
-    "            #save cropped img\n",
-    "            cropped = image.crop((xmin, ymin, xmax, ymax))\n",
-    "            #cropped = image[max(ymin,0):ymax, max(xmin,0):xmax]\n",
+    "        cropped = image.crop((xmin, ymin, xmax, ymax))\n",
     "        width_cropped, height_cropped = cropped.size\n",
     "        if height_cropped > width_cropped: cropped = cropped.transpose(method=2)\n",
     "        cropped.save(file_crop)"
@@ -669,9 +742,10 @@
    },
    "outputs": [],
    "source": [
-    "#test preds\n",
+    "#test preds clsMaxAve\n",
+    "FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
-    "files = glob.glob('./checkpoints/*')\n",
+    "files = glob.glob('./checkpoints/checkpoint2/*')\n",
     "val_losses = [float(f.split('-')[-1][:-5]) for f in files]\n",
     "index = val_losses.index(min(val_losses))\n",
     "print('Loading model from', files[index])\n",
@@ -691,8 +765,22 @@
     "        if test_crop_files[i][:9] == file[:9]:\n",
     "            test_preds_im.append(test_crop_preds[i])\n",
     "    test_preds_im = np.asarray(test_preds_im)\n",
-    "    test_preds_im = np.mean(test_preds_im, axis=0)\n",
-    "    test_preds[j] = test_preds_im"
+    "    #without NoF\n",
+    "    #select = [0,1,2,3,5,6,7]\n",
+    "    score_max = np.max(test_preds_im, axis=1)\n",
+    "    inds = np.argmax(test_preds_im, axis=1)\n",
+    "    labels = [FISH_CLASSES[ind] for ind in inds]\n",
+    "    columns = FISH_CLASSES[:]\n",
+    "    test_preds_im_df = pd.DataFrame(test_preds_im, columns=columns)\n",
+    "    test_preds_im_df['max_cls'] = labels\n",
+    "    test_preds_im_df['max_score'] = score_max \n",
+    "    test_preds_im_df['Counts'] = test_preds_im_df.groupby(['max_cls'])['max_cls'].transform('count')\n",
+    "    idx = test_preds_im_df.groupby(['max_cls'])['max_score'].transform(max) == test_preds_im_df['max_score']\n",
+    "    test_preds_im_df = test_preds_im_df[idx]\n",
+    "    l = FISH_CLASSES.copy()\n",
+    "    l.append('Counts')\n",
+    "    test_preds_im_array = test_preds_im_df[l].as_matrix()\n",
+    "    test_preds[j] = np.average(test_preds_im_array[:,:-1], axis=0, weights=test_preds_im_array[:,-1], returned=False)"
    ]
   },
   {
@@ -704,6 +792,8 @@
    "outputs": [],
    "source": [
     "#calculate train logloss\n",
+    "FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
+    "\n",
     "train_files = test_files[1000:]\n",
     "train_preds = test_preds[1000:,:]\n",
     "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
@@ -734,9 +824,8 @@
     "submission = pd.DataFrame(test_preds[:1000,:], columns=FISH_CLASSES)\n",
     "submission.insert(0, 'image', test_files[:1000])\n",
     "\n",
-    "now = datetime.datetime.now()\n",
-    "info = 'BBCROP_resnet50_' + '{:.4f}'.format(log_loss)\n",
-    "sub_file = 'submission_' + info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
+    "info = 'RFCN_AGONOSTICnms_'+RFCN_MODEL+'_BBCROP_resnet50_clsMaxAve_conf{:.2f}_T{}_'.format(CONF_THRESH, T) + '{:.4f}'.format(log_loss)\n",
+    "sub_file = 'submission_' + info + _'.csv'\n",
     "submission.to_csv(sub_file, index=False)"
    ]
   },
