--- a/model_bbox/RFCN.ipynb
+++ b/model_bbox/RFCN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
-    "import collections, math\n",
+    "import collections, math, os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline "
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -236,41 +236,10 @@
     {
      "data": {
       "text/plain": [
-       "Counter({0.0: 682,\n",
-       "         1.0: 3241,\n",
-       "         2.0: 617,\n",
-       "         3.0: 143,\n",
-       "         4.0: 50,\n",
-       "         5.0: 24,\n",
-       "         6.0: 14,\n",
-       "         7.0: 2,\n",
-       "         8.0: 3,\n",
-       "         9.0: 1})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "collections.Counter(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "Counter({0.0: 682, 1.0: 4057, 2.0: 38})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,6 +307,71 @@
     "info = 'RFCN_AGONOSTICnms_clsMaxAve_'+RFCN_MODEL+'_conf{:.2f}_T{}_'.format(CONF_THRESH, T) + '{:.4f}'.format(log_loss)\n",
     "sub_file = 'submission_' + info + '.csv'\n",
     "submission.to_csv(sub_file, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('ALB', 527), ('BET', 15), ('DOL', 13), ('LAG', 38), ('NoF', 179), ('OTHER', 73), ('SHARK', 15), ('YFT', 140)])\n",
+      "OrderedDict([('ALB', 1731), ('BET', 200), ('DOL', 116), ('LAG', 67), ('NoF', 453), ('OTHER', 299), ('SHARK', 175), ('YFT', 736)])\n",
+      "OrderedDict([('ALB', 1719), ('BET', 200), ('DOL', 117), ('LAG', 67), ('NoF', 465), ('OTHER', 299), ('SHARK', 176), ('YFT', 734)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
+    "\n",
+    "count_test = {}\n",
+    "cnt = collections.Counter(np.argmax(test_preds, axis=1))\n",
+    "for key, value in cnt.items():\n",
+    "    count_test[FISH_CLASSES[key]] = value \n",
+    "count_test = collections.OrderedDict(sorted(count_test.items()))\n",
+    "print(count_test)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "count_train = {}\n",
+    "cnt = collections.Counter(np.argmax(train_preds, axis=1))\n",
+    "for key, value in cnt.items():\n",
+    "    count_train[FISH_CLASSES[key]] = value \n",
+    "count_train = collections.OrderedDict(sorted(count_train.items()))\n",
+    "print(count_train)\n",
+    "\n",
+    "count_gt = {}\n",
+    "for fish in FISH_CLASSES:\n",
+    "    count_gt[fish] = len(os.listdir('../data/train/'+fish))\n",
+    "count_gt = collections.OrderedDict(sorted(count_gt.items()))\n",
+    "print(count_gt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('ALB', 1990.479), ('BET', 56.655), ('DOL', 49.101), ('LAG', 143.526), ('NoF', 676.083), ('OTHER', 275.721), ('SHARK', 56.655), ('YFT', 528.78)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in count_test.items():\n",
+    "    count_test[key] = value*3.777 \n",
+    "print(count_test)"
    ]
   },
   {
